--- a/assets/css/logo-library.css
+++ b/assets/css/logo-library.css
@@ -5,6 +5,55 @@
 	margin: 0 auto;
 	min-width:272px;
 	position:relative;
-	top:110px;
-	width:80%;
+	top:90px;
+	width:90%;
+}
+
+.logo-library>span {
+	background-color: #fff;
+	border-radius: 16px;
+	box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.07);
+	height:240px;
+	width:240px;
+	margin:20px 18px 20px 18px;
+}
+
+.logo-library>span>img {
+	height:180px;
+	width:240px;
+}
+
+.logo-library>span>span {
+	border-top:0.8px solid #E5E5E5;
+	display:block;
+	height:60px;
+	position:relative;
+	width:240px;
+}
+
+.logo-library>span>span p{
+	color:#636363;
+	font-family:HelveticaNeue;
+	font-size:18px;
+	line-height:30px;
+	margin:0px 10px 0px 10px;
+	overflow: hidden;
+	text-align: center;
+	text-overflow:ellipsis;
+	white-space: nowrap;
+}
+
+.logo-library>span>span span{
+	align-items:center;
+	border-top:0.8px solid #EFEFEF;
+	display:flex;
+	height:30px;
+	justify-content: center;
+}
+
+.logo-library>span>span span a{
+	color:#adadad;
+	font-family:HelveticaNeue;
+	font-size:14px;
+	margin:0px 23px 0px 23px;
 }
