--- a/assets/css/logo-library.css
+++ b/assets/css/logo-library.css
@@ -1,9 +1,11 @@
 .logo-library{
-	display:flex;
-	flex-wrap: wrap;
+	display:grid;
+	grid-template-columns: repeat(auto-fill, 240px);
+	grid-column-gap: 36px;
 	justify-content: center;
+	justify-items:center;
 	margin: 0 auto;
-	min-width:272px;
+	min-width:276px;
 	position:relative;
 	top:90px;
 	width:90%;
@@ -15,7 +17,7 @@
 	box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.07);
 	height:240px;
 	width:240px;
-	margin:20px 18px 20px 18px;
+	margin:20px 0px 20px 0px;
 }
 
 .logo-library>span>img {
