--- a/assets/css/logo-library.css
+++ b/assets/css/logo-library.css
@@ -1,13 +1,15 @@
 .logo-library{
 	display:grid;
-	grid-template-columns: repeat(auto-fill, 240px);
 	grid-column-gap: 36px;
+	grid-row-gap: 40px;
+	grid-template-columns: repeat(auto-fill, 240px);
+	grid-template-rows: 240px;
 	justify-content: center;
 	justify-items:center;
 	margin: 0 auto;
-	min-width:276px;
+	min-width:240px;
 	position:relative;
-	top:90px;
+	top:110px;
 	width:90%;
 }
 
@@ -17,7 +19,6 @@
 	box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.07);
 	height:240px;
 	width:240px;
-	margin:20px 0px 20px 0px;
 }
 
 .logo-library>span>img {
