--- a/assets/css/logo-library.css
+++ b/assets/css/logo-library.css
@@ -13,17 +13,19 @@
   width: 90%;
 }
 
-.logo-library > span {
+.logo-library>span {
   background-color: #fff;
   border-radius: 16px;
   box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.1);
   width: 240px;
 }
 
-.logo-library > span > img {
+.logo-library>span>img {
   display: block;
   height: 180px;
   width: 240px;
+  object-fit: contain;
+  border-radius: 16px 16px 0px 0px;
 }
 
 .card {
@@ -31,16 +33,16 @@
   transform: translateY(1000px);
 }
 
-.logo-library > span > span {
+.logo-library>span>span {
   border-top: 1px solid #e5e5e5;
   display: block;
   position: relative;
 }
 
-.logo-library > span > span p {
+.logo-library>span>span p {
   color: #636363;
   display: block;
-  font-family: HelveticaNeue;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   font-size: 18px;
   line-height: 30px;
   margin: 0 auto;
@@ -51,18 +53,32 @@
   width: 220px;
 }
 
-.logo-library > span > span span {
+.logo-library>span>span span {
   align-items: center;
   border-top: 1px solid #efefef;
   display: flex;
 }
 
-.logo-library > span > span span a {
-  color: #adadad;
+.logo-library>span>span span a {
+  color: #888888;
   display: block;
-  font-family: HelveticaNeue;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   font-size: 14px;
   line-height: 30px;
   text-align: center;
-  width: 80px;
+  width: 240px;
+  border-radius: 0px 0px 16px 16px;
+  transition: 0.5s;
+}
+
+.logo-library>span>span span a:hover {
+  color: #888888;
+  display: block;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-size: 14px;
+  line-height: 30px;
+  text-align: center;
+  width: 240px;
+  border-radius: 0px 0px 16px 16px;
+  background: rgba(0, 0, 0, 0.075);
 }
