--- a/assets/css/logo-library.css
+++ b/assets/css/logo-library.css
@@ -2,12 +2,12 @@
   display: grid;
   grid-column-gap: 36px;
   grid-row-gap: 40px;
-  grid-template-columns: repeat(auto-fill, 240px);
-  grid-template-rows: 240px;
+  grid-template-columns: repeat(auto-fill, 280px);
+  grid-template-rows: 280px;
   justify-content: center;
   justify-items: center;
   margin: 0 auto;
-  min-width: 240px;
+  min-width: 280px;
   position: relative;
   top: 110px;
   width: 90%;
@@ -18,13 +18,13 @@
   background-color: #fff;
   border-radius: 16px;
   box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.1);
-  width: 240px;
+  width: 280px;
 }
 
 .logo-library>span>img {
   display: block;
-  height: 180px;
-  width: 240px;
+  height: 210px;
+  width: 280px;
   object-fit: contain;
   border-radius: 16px 16px 0px 0px;
   padding: 16px;
@@ -47,13 +47,13 @@
   display: block;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   font-size: 18px;
-  line-height: 30px;
+  line-height: 34px;
   margin: 0 auto;
   overflow: hidden;
   text-align: center;
   text-overflow: ellipsis;
   white-space: nowrap;
-  width: 220px;
+  width: 248px;
 }
 
 .logo-library>span>span span {
@@ -67,11 +67,12 @@
   display: block;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   font-size: 14px;
-  line-height: 30px;
+  line-height: 34px;
   text-align: center;
-  width: 240px;
+  width: 280px;
   border-radius: 0px 0px 16px 16px;
   transition: 0.5s;
+  text-transform: uppercase;
 }
 
 .logo-library>span>span span a:hover {
@@ -79,9 +80,10 @@
   display: block;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   font-size: 14px;
-  line-height: 30px;
+  line-height: 34px;
   text-align: center;
-  width: 240px;
+  width: 280px;
   border-radius: 0px 0px 16px 16px;
   background: rgba(0, 0, 0, 0.075);
+  text-transform: uppercase;
 }
