--- a/assets/css/menu.css
+++ b/assets/css/menu.css
@@ -10,11 +10,6 @@
   padding: 0;
 }
 
-.fa,
-.fas {
-  color: #8b8b8b;
-}
-
 a,
 a:active,
 a:hover,
@@ -101,10 +96,18 @@ nav {
   position: absolute;
 }
 
+.fa,
+.fas {
+  color: #8b8b8b;
+}
+
 .hidden-menu {
   visibility: hidden;
   z-index: -1;
   position: absolute;
+  transition: all 300ms;
+  transform: translateY(-120px);
+  box-shadow: 0px 3px 8px rgba(0, 0, 0, 0.1);
 }
 
 .hidden-menu a,
