--- a/assets/css/menu.css
+++ b/assets/css/menu.css
@@ -87,7 +87,7 @@ nav {
 }
 
 .menu-active {
-  color: #8b8b8b !important;
+  color: #f8485e !important;
 }
 
 .hamburger-button {
@@ -96,9 +96,24 @@ nav {
   position: absolute;
 }
 
-.fa,
-.fas {
-  color: #8b8b8b;
+.hamburger-button:after {
+  color: #f8485e;
+  display: inline-block;
+  font: normal normal normal 14px/1 'Font Awesome 5 Free';
+  font-weight: 900;
+  font-size: inherit;
+  text-rendering: auto;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  content: "\f054";
+  transform: rotate(-90deg);
+  transition: all 300ms;
+  /*text-shadow: -2px 2px 5px #888;*/
+}
+
+.hamburger-button.open:after {
+  transform: rotate(90deg);
+  /*text-shadow: 2px -2px 5px #888;*/
 }
 
 .hidden-menu {
@@ -113,7 +128,7 @@ nav {
 .hidden-menu a,
 .hidden-menu a:visited {
   color: #adadad;
-  font-family: HelveticaNeue;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   font-size: 14px;
   margin: 12px 0px 12px 0px;
   text-transform: uppercase;
