--- a/assets/css/logo-library.css
+++ b/assets/css/logo-library.css
@@ -70,20 +70,24 @@
   line-height: 34px;
   text-align: center;
   width: 280px;
-  border-radius: 0px 0px 16px 16px;
-  transition: 0.5s;
+  border-radius: 0px 0px 0px 0px;
+  transition: 0.25s;
   text-transform: uppercase;
 }
 
-.logo-library>span>span span a:hover {
-  color: #888888;
-  display: block;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  font-size: 14px;
-  line-height: 34px;
-  text-align: center;
-  width: 280px;
+.logo-library>span>span span a:nth-child(1) {
+  border-radius: 0px 0px 0px 16px;
+}
+
+.logo-library>span>span span a:nth-last-child(1) {
+  border-radius: 0px 0px 16px 0px;
+}
+
+.logo-library>span>span span a:nth-last-child(1):nth-child(1) {
   border-radius: 0px 0px 16px 16px;
-  background: rgba(0, 0, 0, 0.075);
-  text-transform: uppercase;
+}
+
+.logo-library>span>span span a:hover {
+  color: #f8485e;
+  background: rgba(0, 0, 0, 0.125);
 }
