--- a/assets/css/menu.css
+++ b/assets/css/menu.css
@@ -23,6 +23,14 @@ a:visited {
 
 body {
   background-color: #fbfbfb;
+  /*position: relative;
+  min-height: 100vh;*/
+}
+
+.page-container {
+  position: relative;
+  min-height: 100vh;
+  height: 100% !important;
 }
 
 .title {
@@ -47,6 +55,7 @@ nav {
   box-shadow: 0px 3px 8px rgba(0, 0, 0, 0.1);
   height: 60px;
   position: fixed;
+  top: 0;
   width: 100%;
   z-index: 3;
 }
@@ -160,11 +169,70 @@ nav {
   color: #8b8b8b;
 }
 
+.footer {
+  display: block;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  background: #fff;
+  box-shadow: 0px -3px 8px rgba(0, 0, 0, 0.1);
+  margin-top: 16px;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+  height: 60px;
+  width: 100%;
+  position: absolute;
+  right: 0;
+  left: 0;
+  bottom: 0;
+  z-index: 2;
+}
+
+.container {
+  margin: 0;
+  position: absolute;
+  left: 180px;
+  right: 180px;
+}
+
+.text-muted,
+.text-muted-left,
+.text-muted-right {
+  color: #aaa;
+}
+
+.text-muted-link {
+  color: #999;
+}
+
+.text-muted-left {
+  float: left;
+  text-align: left;
+}
+
+.text-muted-right {
+  float: right;
+  text-align: right;
+}
+
+.footer-legal {
+  color: #999;
+  font-family: schdesign;
+  letter-spacing: 1px;
+  font-size: 18px;
+}
+
+.footer-legal-sch {
+  color: #f8485e;
+}
+
 @media screen and (max-width: 1716px) {
   .menu-items {
     right: 100px;
   }
   .brand-logo {
+    left: 100px;
+  }
+  .footer>* {
+    right: 100px;
     left: 100px;
   }
 }
@@ -176,6 +244,10 @@ nav {
   .brand-logo {
     left: 60px;
   }
+  .footer>* {
+    right: 60px;
+    left: 60px;
+  }
 }
 
 @media screen and (max-width: 1012px) {
@@ -183,6 +255,10 @@ nav {
     right: 30px;
   }
   .brand-logo {
+    left: 30px;
+  }
+  .footer>* {
+    right: 30px;
     left: 30px;
   }
 }
@@ -213,5 +289,17 @@ nav {
     position: fixed;
     right: 0;
     top: 60px;
+  }
+  .text-muted-left {
+    text-align: center;
+    width: 100%;
+  }
+  .text-muted-right {
+    text-align: center;
+    width: 100%;
+  }
+  .footer {
+    padding-top: 0.2rem;
+    padding-bottom: 0.2rem;
   }
 }
